--- a/css/styles.css
+++ b/css/styles.css
@@ -20,3 +20,15 @@ img {
 .js-gallery__img {
   width: 100%;
 }
+
+#validation-input {
+  border: 3px solid #bdbdbd;
+}
+
+#validation-input.valid {
+  border-color: #4caf50;
+}
+
+#validation-input.invalid {
+  border-color: #f44336;
+}
